--- a/views/user/addressmanagement.ejs
+++ b/views/user/addressmanagement.ejs
@@ -24,7 +24,10 @@
                     <div class="flex flex-col items-center mb-6">
                         <!-- Profile Image -->
                     
-                        <input type="file" id="image-input" accept="image/*" class="hidden">
+                         <div class="text-center mt-2">
+                        <p class="text-gray-600">Hello,</p>
+                        <h2 class="text-xl font-semibold"><%= user.fullname %></h2>
+                    </div>
                     
         
                     </div>
