--- a/views/user/ordersummary.ejs
+++ b/views/user/ordersummary.ejs
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
+
 <body class="bg-gray-50">
+    
+ <header class="bg-white shadow-sm">
+        <%-include("../../views/partials/user/header")-%>
+    </header>
 <div class="container mx-auto px-4 py-8 max-w-6xl">
     
     <h1 class="text-3xl font-bold text-gray-900 mb-6">My Orders</h1>
@@ -19,10 +24,7 @@
         <div class="w-full md:w-1/3 lg:w-1/4">
             <div class="bg-white rounded-lg shadow p-6 mb-6">
                 <div class="flex flex-col items-center mb-6">
-                    <div class="relative w-20 h-20">
-                        <img src="/images/default-user.png"
-                             class="w-20 h-20 rounded-full object-cover border-2 border-gray-300">
-                    </div>
+                  
 
                     <div class="text-center mt-2">
                         <p class="text-gray-600">Hello,</p>
