--- a/views/partials/admin/sidebar.ejs
+++ b/views/partials/admin/sidebar.ejs
@@ -12,7 +12,7 @@
         <a href="/admin/users" class="nav-link flex items-center px-6 py-3 hover:bg-purple-800">
             <i class="fas fa-users mr-3"></i><span>Users</span>
         </a>
-        <a href="#" class="nav-link flex items-center px-6 py-3 hover:bg-purple-800">
+        <a href="/admin/orders" class="nav-link flex items-center px-6 py-3 hover:bg-purple-800">
             <i class="fas fa-shopping-cart mr-3"></i><span>Orders</span>
         </a>
         <a href="/admin/category" class="nav-link flex items-center px-6 py-3 hover:bg-purple-800">
