--- a/views/user/addressmanagement.ejs
+++ b/views/user/addressmanagement.ejs
@@ -85,7 +85,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="flex items-center text-gray-700 hover:text-indigo-600">
+                                <a href="/change-password" class="flex items-center text-gray-700 hover:text-indigo-600">
                                     <i class="fas fa-key mr-3 w-5 text-gray-600"></i>
                                     <span>Change Password</span>
                                 </a>
