--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -125,7 +125,9 @@
                 }
 
                 // Email Validation
-                const emailRegex = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
+               
+                const emailRegex = /^(?!.*\.\.)(?!.*\.$)(?!^\.)[A-Za-z0-9._%+-]{2,}@[A-Za-z0-9-]+\.[A-Za-z]{2,24}$/;
+
                 if (!email.value.match(emailRegex)) {
                     swal("Error", "Enter a valid email address!", "error");
                     return;
